fix: hide overflow-x for animations

--- a/src/components/Image/index.scss
+++ b/src/components/Image/index.scss
@@ -10,7 +10,7 @@
   width: 100%;
 
   img {
-    height: 100%
+    height: 100%;
     left: 0;
     object-fit: cover;
     position: absolute;
