--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -5,5 +5,6 @@
     background: linear-gradient($main-bg-top, $main-bg-bottom);
     padding: 32px 0;
     min-height: 100vh;
+    overflow-x: hidden;
   }
 }
